--- a/app.json
+++ b/app.json
@@ -28,8 +28,7 @@
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
-    "plugins": [
-      "expo-router"
-    ]
+    "plugins": ["expo-router"], 
+    "experiments": {"tsconfigPaths": true}
   }
 }
